fixed overflow x in home page

--- a/src/components/FeaturedProject/project.module.css
+++ b/src/components/FeaturedProject/project.module.css
@@ -75,7 +75,8 @@
 .image {
   width: 100%;
   height: 400px;
-  object-fit: cover;
+  object-fit: contain;
+  object-position: center;
   transition: transform 0.3s ease;
 }
 
